Tweaking main.css
Change Log v.0.0.12A

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@ div.main {
     padding: 75px 25px;
     display: inline-block;
     height: 520px;
-    margin-top: calc(((100vh - 565px) / 2));
+    margin-top: calc(((100vh - 465px) / 2));
 }
 div.main section.photo {
     height: 75px;
@@ -93,5 +93,6 @@ div.main section.links a:hover svg path {
     }
     footer {
         position: relative;
+		background-color: white;
     }
 }
