Tweaked main.css even more.
Change Log V0.0.13A

- Tweaked Footer
   + Changed text color from white to black.
- Reverted the changes made to div.main.

- Changed div.main section.photo height from 75px to 55px.

-Added a background color whuch is white to footer with a 50% border-radius.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,7 +19,7 @@ footer {
     display: block;
     text-align: center;
     font-size: 17.5px;
-    color: white;
+    color: black;
     line-height: 75px;
     position: absolute;
     bottom: 0;
@@ -33,10 +33,10 @@ div.main {
     padding: 75px 25px;
     display: inline-block;
     height: 520px;
-    margin-top: calc(((100vh - 465px) / 2));
+    margin-top: calc(((100vh - 565px) / 2));
 }
 div.main section.photo {
-    height: 75px;
+    height: 55px;
 }
 div.main section.photo img {
     height: 125px;
@@ -94,5 +94,6 @@ div.main section.links a:hover svg path {
     footer {
         position: relative;
 		background-color: white;
+		border-radius: 50%;
     }
 }
