--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,7 @@ footer {
     text-align: center;
     font-size: 17.5px;
     color: white;
+	background-color:black;
     line-height: 75px;
     position: absolute;
     bottom: 0;
