--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,6 +26,7 @@ footer {
 }
 div.main {
     width: 400px;
+	background: rgba(76, 175, 80, 0.3);
     background-color: white;
     border-radius: 5px;
     text-align: center;
