--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,7 @@ div.main {
     box-sizing: border-box;
     padding: 75px 25px;
     display: inline-block;
-    height: 520px;
+    height: 100%;
     margin-top: calc(((100vh - 565px) / 2));
 }
 div.main section.photo {
