--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -26,14 +26,14 @@ footer {
 }
 div.main {
     width: 400px;
-	background: rgba(76, 175, 80, 0.3);
-    background-color: white;
+	background: rgba(255, 0, 0, 0.3);
     border-radius: 5px;
     text-align: center;
     box-sizing: border-box;
     padding: 75px 25px;
     display: inline-block;
-    height: 100%;
+    height: 520px;
+    margin-top: calc(((100vh - 565px) / 2));
 }
 div.main section.photo {
     height: 75px;
